add value fixed and contradiction layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="lead_angle">Lead Angle</string>
     <string name="reference_diameter">Reference Diameter</string>
     <string name="base_diameter">Base Diameter</string>
+    <string name="fixed">Fixed</string>
+    <string name="value">Value</string>
 </resources>
